Fixed cukes; Updated to meet (some) rubocop standards.

--- a/ChangeLog
+++ b/ChangeLog
@@ -21,3 +21,7 @@
 === Version 0.5 / 2014-07-27
 * Enabled use of query parameters on GET calls
 * Revised tests to replace expect with should
+=== Version 0.5 / 2014-07-27
+* Fixed reference to nokogiri' (~> 0)
+* Fixed all cukes, no more @wip
+* Added rubocop style-checker/lint compliance
