--- a/ChangeLog
+++ b/ChangeLog
@@ -25,5 +25,15 @@
 * Fixed reference to nokogiri' (~> 0)
 * Fixed all cukes, no more @wip
 * Added rubocop style-checker/lint compliance
-=== Version 0.7 / 2014-02-10
-* Fix json pretty_print
+=== Version 0.7 / 2015-02-10
+* Tested debug fix of json printing
+=== Version 0.8 / 2015-02-10
+* Fixed json pretty_print
+=== Version 0.9 / 2015-
+* Remove double output of Body=
+* automated bundling and publishing of gem
+* fixed cuke that failed due to string-like class
+* removed config.ru from rubocop llist
+* changed .should to expect() in features/step_definitions/rest_client_steps.rb
+* removed Gemfile.lock file
+
