trying to push gem automatically, seems to require newer version

--- a/ChangeLog
+++ b/ChangeLog
@@ -38,3 +38,4 @@
 * automated bundling and publishing of gem
 * added yard and yard-cucumber to automate documenation
 === Version 1.0 / 2015-07-17
+=== Version 1.1 / 2015-07-17
