--- a/ChangeLog
+++ b/ChangeLog
@@ -49,4 +49,5 @@
 * Add support for travis-ci
 === Version 1.5 / 2015-12-12
 * Add code coverage
-*
+* Created scenario for combination of authentication & url parameters
+* Fixed Simple Cov formatter issue
