--- a/ChangeLog
+++ b/ChangeLog
@@ -51,3 +51,7 @@
 * Add code coverage
 * Created scenario for combination of authentication & url parameters
 * Fixed Simple Cov formatter issue
+=== Version 1.5.1 / 2016-03-08
+* Updated README.md
+* Added more config files to provide better status feedback
+
