--- a/ChangeLog
+++ b/ChangeLog
@@ -54,4 +54,9 @@
 === Version 1.5.1 / 2016-03-08
 * Updated README.md
 * Added more config files to provide better status feedback
-
+=== Version 1.6 / 2016-10-18
+* Updated supported versions list (removed 1.9 versions, rbx-2)
+* Updated travis to test latest released versions of 2.0-2.3
+* Updated README.md
+* Updated reek ignore list
+* Added "demo" mode profile to cucumber.yml
